--- a/docs/package.json
+++ b/docs/package.json
@@ -26,7 +26,8 @@
     "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.70.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.0.0",
